# IW_CAL

./: CMakeLists.txt  main.cpp  readme.md
include/: dead_reckon.h  filter.h  rotation.h  types.h
src/: dead_reckon.cpp  filter.cpp
